Fix LayoutTableRow::AddOverflowFromCell()

This fixes the following problems:
1. Incorrect offset of contents overflow from cell:
   This was changed in https://codereview.chromium.org/2786463004
   Both the old version and the new version are incorrect:
   Should adjust by the difference of locations of row and cell.
2. Missing cell overflow propagating to row when the cell doesn't
   span rows.
3. Checking of HasBackground made row's visual overflow depend
   on the existence of background. Just remove the check to avoid
   tricky logic which otherwise would be required to invalidate row's
   overflow on background existence change.
4. Cell generates not only visual overflow, but also layout overflow
   (e.g. when there is a relative-positioned child). This fix doesn't
   change behavior because row doesn't use the layout overflow.
   However, this makes it possible to optimize LayoutTableSection::
   ComputeOverflowFromCell() to just accumulate overflows from rows
   instead of all cells. The optimization will be in the next CL.

BUG=719106,603993,646015
R=wkorman@chromium.org

Review-Url: https://codereview.chromium.org/2861653006 .
Cr-Commit-Position: refs/heads/master@{#470166}

Former-commit-id: 0391059128167dc8dc8fdbcbc7d3e3b81b7edefb